looks good. we can get the sections

--- a/template/intro.md.jinja
+++ b/template/intro.md.jinja
@@ -3,7 +3,7 @@ Introduction
 
 This is another attempt to understand how git works.
 
-As of `{{ git_version }}`, the git documentation page has {{ sections | length }} sections:
+As of `{{ version }}`, the git documentation page has {{ sections | length }} sections:
 
 {%- for item in sections %}
 {{ loop.index}}. {{ item }}
