table didn't render without a header. trying to see if a header helps.

--- a/template/section-1/index.md.jinja
+++ b/template/section-1/index.md.jinja
@@ -3,6 +3,8 @@ Section 1: Main Porcelain Commands
 
 There are {{ items | length }} commands in this section. 
 
+| No | Command | Description |
+| -- | ------- | ----------- |
 {% for item in items -%}
 | {{ loop.index }} | [{{ item }}](./{{ item }}.md) | {{ items[item] }} |
 {% endfor %}
