parse git option help to a key-value pair

--- a/template/section-1/init.md.jinja
+++ b/template/section-1/init.md.jinja
@@ -1,11 +1,14 @@
 git init
 ===
 
-This commmand accepts {{ items | length }} :
+This commmand accepts {{ items | length }} options:
 
-{%- for item in items %}
-{{ loop.index }}. {{ item }}
-{%- endfor %}
+
+| No | Option | Description |
+| -- | ------- | ----------- |
+{% for item in items -%}
+| {{ loop.index }} | {{ item }} | {{ items[item] }} |
+{% endfor %}
 
 What is it for?
 ---
