git init is marked as command #21 from 31 commands in section 1

--- a/template/section-1/init.md.jinja
+++ b/template/section-1/init.md.jinja
@@ -15,7 +15,7 @@ What is it for?
 Using `git init` will allow you to manipulate the specified directory with `git`. 
 
 
-Example 1
+Example 1 : No options, default values.
 ---
 ```
 {%- for item in example['1'] %}
@@ -30,4 +30,5 @@ Adding the file to git results in an error. Checking the git status also results
 The command `git init` makes it a git repository. Since we did not specify any directory or any options, it will process the current directory.
 
 We can then run `git status` and `git add` and it will behave as expected.
+
 
