git init example #2

--- a/template/section-1/init.md.jinja
+++ b/template/section-1/init.md.jinja
@@ -21,4 +21,14 @@ Adding the file to git results in an error. Checking the git status also results
 The command `git init` makes it a git repository. Since we did not specify any directory or any options, it will process the current directory.
 
 We can then run `git status` and `git add` and it will behave as expected.
+
+Example 2 : --template
+---
+```
+{%- for item in example['2'] %}
+{{ item }}
+{%- endfor %}
+```
+
+
 {% endblock %}
