example for git init template directory

--- a/template/section-1/init.md.jinja
+++ b/template/section-1/init.md.jinja
@@ -22,7 +22,7 @@ The command `git init` makes it a git repository. Since we did not specify any d
 
 We can then run `git status` and `git add` and it will behave as expected.
 
-Example 2 : --template
+Example 2 : --template <template-directory>
 ---
 ```
 {%- for item in example['2'] %}
