link to official git documentations

--- a/template/layout/command.md.jinja
+++ b/template/layout/command.md.jinja
@@ -1,6 +1,7 @@
 git {% block command %}{% endblock %}
 ===
 
+Offical documentation for [git-{{ command}}](https://git-scm.com/docs/git-{{ command}}/{{ version }})
 This commmand accepts {{ items | length }} options:
 
 
