--- a/template/section-1/init.md.jinja
+++ b/template/section-1/init.md.jinja
@@ -14,7 +14,7 @@ Example 1 : No options, default values.
 {%- endfor %}
 ```
 
-Here we first create a directory called `project1`. This will be our new git repository. We make `project1` the current directory by running the `cd` command. Next we create an empty file called `Makefile`. 
+Here we first create a directory called `project`. This will be our new git repository. We make `project` the current directory by running the `cd` command. Next we create an empty file called `Makefile`. 
 
 Adding the file to git results in an error. Checking the git status also results in an error. The important bit is `not a git repository`. This tells us that you can run `add` and `status` only in a git repository.
 
