--- a/template/section-1/init.md.jinja
+++ b/template/section-1/init.md.jinja
@@ -6,7 +6,7 @@ What is it for?
 Using `git init` will allow you to manipulate the specified directory with `git`. 
 
 
-Example 1 : No options, default values.
+Example 1: No options, default values.
 ---
 ```
 {%- for item in example['1'] %}
@@ -22,7 +22,7 @@ The command `git init` makes it a git repository. Since we did not specify any d
 
 We can then run `git status` and `git add` and it will behave as expected.
 
-Example 2 : --template \<template-directory>
+Example 2: --template \<template-directory>
 ---
 ```
 {%- for item in example['2'] %}
@@ -30,8 +30,23 @@ Example 2 : --template \<template-directory>
 {%- endfor %}
 ```
 
-The `--template` option allows you to specify a directory that will be used as a template for the files in the `.git` directory. The content of the directory will be merged with the contents of git's default template directory.
+What does this tell us?
 
-In the example above, the default value of the `.git/config` file does not contain a `core.editor` value and the `core.logallrefupdates` is set to `true`.
+- `git init` without the `--template` option will use `/usr/share/git-core/templates` as the template directory.
+- `git init` with the `--template` option on an empty template directory would still create:
+  - HEAD file
+  - config file
+  - objects directory
+  - refs directory
+
+Example 2a:  --template \<template-directory>
+```
+{%- for item in example['2a'] %}
+{{ item }}
+{%- endfor %}
+```
+What does this tell us?
+
+- If a files does not conflict with the git structure, it will be copied over.
 
 {% endblock %}
