--- a/template/section-1/init.md.jinja
+++ b/template/section-1/init.md.jinja
@@ -149,5 +149,16 @@ Example 3:  --bare
 What does this tell us?
 - the bare repository behaves differently.
 
+Example 3a:  --bare
+---
+```
+{%- for item in example['3a'] %}
+{{ item }}
+{%- endfor %}
+```
+
+What does this tell us?
+- the bare repository behaves differently.
+
 
 {% endblock %}
