--- a/template/section-1/init.md.jinja
+++ b/template/section-1/init.md.jinja
@@ -175,6 +175,18 @@ Example 3a:  --bare
 What does this tell us?
 - We can push-to/clone-from/pull-from the bare repository.
 
+Can we clone from .git?
+
+Example 3b: --bare
+---
+```
+{%- for item in example['3b'] %}
+{{ item }}
+{%- endfor %}
+```
+
+What does this tell us?
+- We can push-to/clone-from/pull-from the non-bare repository too.
 
 
 {% endblock %}
